WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196872
WebDriver: Set Cookie endpoint does not correctly set subdomain cookies
https://bugs.webkit.org/show_bug.cgi?id=196872
Summary
WebDriver: Set Cookie endpoint does not correctly set subdomain cookies
Devin Rousso
Reported
2019-04-12 11:27:58 PDT
```py from selenium import webdriver driver = webdriver.Safari(executable_path='$build/Release/safaridriver') driver.get("
https://apple.com
") driver.add_cookie({ 'name': 'testfromotherdomain', 'value': '42', 'domain': 'school.apple.com', }) driver.get("
https://school.apple.com
") driver.add_cookie({ 'name': 'testfromsamedomain', 'value': '42', 'domain': 'school.apple.com', }) ``` After running the above, stop the active session and inspect <
https://school.apple.com
>. There should be two cookies ("testfromotherdomain" and "testfromsamedomain"), but there's only one ("testfromsamedomain").
Attachments
Patch
(2.13 KB, patch)
2019-04-12 11:30 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-04-12 11:28:20 PDT
<
rdar://problem/49233240
>
Devin Rousso
Comment 2
2019-04-12 11:30:51 PDT
Created
attachment 367336
[details]
Patch
Joseph Pecoraro
Comment 3
2019-04-15 12:21:02 PDT
Comment on
attachment 367336
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-04-15 12:49:13 PDT
Comment on
attachment 367336
[details]
Patch Clearing flags on attachment: 367336 Committed
r244281
: <
https://trac.webkit.org/changeset/244281
>
WebKit Commit Bot
Comment 5
2019-04-15 12:49:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug