WebDriver: Set Cookie endpoint does not correctly set subdomain cookies https://bugs.webkit.org/show_bug.cgi?id=196872 <rdar://problem/49233240>

Reviewed by Joseph Pecoraro.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::addSingleCookie):
Rather than try to "force" the cookie to be set on the current active URL, use the cookie
itself to figure out which domain it should be set on.


Canonical link: https://commits.webkit.org/211182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244281 268f45cc-cd09-0410-ab3c-d52691b4dbfc